# Chat_Server_Boost

./: CMakeLists.txt  README.md
src/: HandleClient.cpp  HandleClient.h  HandleServer.cpp  HandleServer.h  bitset.h  client.cpp  global.cpp  global.h  server.cpp
src/mysql_pool/: sql_connection_pool.cpp  sql_connection_pool.h
src/redis_pool/: nosql_connection_pool.cpp  nosql_connection_pool.h
